<resources>
    <string name="app_name">Scholar</string>
    <string name="scholarlyTitle">Welcome to Scholar</string>
    <string name="scholarlySubtitle">Add assignments here!</string>
    <string name="scholarlyButton">Scholarly</string>
    <string name="onTime">OnTime</string>
    <string name="late">Late</string>
    <string name="pointsEarned">Points Earned</string>
    <string name="total">Total so Far</string>
    <string name="totalSoFar"> %1$d</string>
    <string name="reportTitle">Scholars Report</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="enter_pointsEarned">Enter Points</string>
    <string name="action_scholarly">Scholarly</string>
    <string name="action_report">Report</string>
    <string name="assignment_name">Hi, I\'m Scholar\n\nAdding grades is easy!\n\n Add your classroom grades now!</string>
    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="action_change">Change Theme</string>
    <string name="group_communicate">Communicate</string>

    <string name="nav_header_title">Scholar(Lab)</string>
    <string name="nav_header_subtitle">scholar@scholar.ie</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_about">About Us</string>
    <string name="aboutus_title">Homer for President !!</string>
    <string name="aboutus_message">Hi, I\'m Scholar\n\nAdding grades is easy!\n\n Add your classroom grades now!</string>

    <string name="scholarsNotFound">No Scholars Yet…\nGo Add an Assignment!</string>
    <string name="scholarError">Error : Couldn\'t Add…</string>
    <string name="scholarDetails">Scholar Details</string>

    <string name="pts">Points Earned :</string>
    <string name="completed">Completed :</string>
    <string name="message">Message :</string>
    <string name="pointsPossible">Points Possible :</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="select_profile_image">Select Profile Image</string>

    <string name="messageLoading">Please Wait while the Scholars are Loading...</string>

    <!-- START Firebase Resources-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="default_web_client_id" translatable="false">32985944736-jca765q01pf422m4e83s0sj4tie0u9m9.apps.googleusercontent.com</string>
</resources>