<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/reportFragment">

    <fragment
        android:id="@+id/scholarlyFragment"
        android:name="ie.wit.scholar.ui.scholarly.ScholarlyFragment"
        android:label="@string/action_scholarly"
        tools:layout="@layout/fragment_scholarly" >
        <action
            android:id="@+id/action_scholarlyFragment_to_reportFragment"
            app:destination="@id/reportFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/reportFragment"
        android:name="ie.wit.scholar.ui.report.ReportFragment"
        android:label="@string/action_report"
        tools:layout="@layout/fragment_report" >
        <action
            android:id="@+id/action_reportFragment_to_scholarlyFragment"
            app:destination="@id/scholarlyFragment"
            app:popUpTo="@id/main_navigation"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_reportFragment_to_scholarDetailFragment"
            app:destination="@id/scholarDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="ie.wit.scholar.ui.about.AboutFragment"
        android:label="@string/action_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/scholarDetailFragment"
        android:name="ie.wit.scholar.ui.detail.ScholarDetailFragment"
        android:label="Scholar Detail"
        tools:layout="@layout/fragment_scholar_detail" >
        <action
            android:id="@+id/action_scholarDetailFragment_to_reportFragment"
            app:destination="@id/reportFragment" />
        <argument
            android:name="scholarid"
            app:argType="string" />
    </fragment>
</navigation>